crates/rpstate/tests/fails/lookup_write_violation.stderr
error[E0308]: mismatched types
  --> tests/fails/lookup_write_violation.rs:9:1
   |
 9 | #[rpstate(prefix = "ui")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Writable<_>`, found `ReadOnly<String>`
10 | pub struct UiState {
11 |     #[state(lookup = "host", parent = NetworkState, export_mut)]
   |                      ------ arguments to this function are incorrect
   |
   = note: expected struct `Writable<_>`
              found struct `ReadOnly<std::string::String>`
note: function defined here
  --> tests/fails/lookup_write_violation.rs:11:22
   |
11 |     #[state(lookup = "host", parent = NetworkState, export_mut)]
   |                      ^^^^^^
   = note: this error originates in the attribute macro `rpstate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `set` found for struct `rpstate::Field<u16, RedbStore>` in the current scope
  --> tests/fails/lookup_write_violation.rs:18:17
   |
18 |     dummy_field.set(9090);
   |                 ^^^
   |
help: there is a method `get` with a similar name, but with different arguments
  --> src/reactive/field.rs
   |
   |     pub fn get(&self) -> TValue {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: one of the expressions' fields has a method of the same name
   |
18 |     dummy_field.signal.set(9090);
   |                 +++++++
